--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "antd": "^4.16.13",
+    "axios": "^0.23.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -60,6 +61,7 @@
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.8.3",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
